--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ height: 570px;
 
 .Tienda{
     width: 1440px;
-    height: 1436px;
+    height: auto;
     border-radius: 136px;
     border: 5px solid #020202;
     background: #8D8175;
@@ -257,11 +257,22 @@ height: 570px;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3,1fr);
     margin: 3.125rem;
+    gap: 2.5rem;
 }
+
+.tam-img{
+    width: 15.625rem;
+    height: 15.625rem;
+    border: .3125rem solid black;
+}
+
+.tam-img2{
+    width: 6.25rem;
+    height: 6.25rem;
+    border: .3125rem solid black;
+}
+
 /*NOSOTROS*/
-
-
-
 .titulo-nosotros {
     height: 159px;
     display: flex;
@@ -324,7 +335,6 @@ height: 570px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
 }
 
 .titulo-newsletter{
@@ -552,7 +562,7 @@ height: 570px;
 }
 
 .carrito section ul{
-    width: 735px;
+    width: 50rem;
     height: auto;
     border-radius: 50px;
     border: 4px solid #000;
@@ -584,6 +594,10 @@ height: 570px;
     border-radius: 80px;
     border: 2px solid #000;
     background: rgba(143, 96, 96, 0.50);
+}
+
+.productos-carrito li{
+    padding: 1.25rem;
 }
 
 .precio-carrito h4{
