--- a/css/style.css
+++ b/css/style.css
@@ -22,23 +22,27 @@
 
 /*HEADER*/
 html{
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body{
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header{
     background-color: #BFAE9D;
+    min-width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     list-style: none;
-
 }
 
 .logo-header{
@@ -47,10 +51,11 @@ header{
 }
 
 .navbar{
+    width: auto;
     display: flex;
     flex-direction: row;
     list-style: none;
-    gap: 50px;
+    gap: 1.875rem;
     text-decoration: none;
 }
 
@@ -75,25 +80,22 @@ nav :hover{
     border-radius: 1px;
     display: flex;
     justify-content: center;
+    align-items: center;
     border: .3125rem solid #5F4136;
     background-image: url("../assets/img/Fondo-cafe.png");
     background-repeat: no-repeat;
     background-size: cover;
-    
-
 }
 
 .img1-inicio{
     width: 685px;
-height: 570px;
+    height: 570px;
 }
 
 .img2-inicio{
-
     width: 597px;
     height: 565px;
 }
-
 
 .section2-inicio{
     height: 600px;
@@ -128,7 +130,6 @@ height: 570px;
 }
 
 .section3-inicio{
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,20 +141,22 @@ height: 570px;
 }
 
 .enlace{
-    margin: 1.875rem;
-    width: 657px;
-    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 128px;
     border: 5px solid #5F4136;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-image: url("../assets/img/fondocafe1.jpeg");
+    background-size: cover;
+    margin: 0 .625rem .625rem .625rem;
 }
 
 
 .enlace a{
-    width: 38.625rem;
-    height: 28.125rem;
-    justify-content: center;
+    width: auto;
+    height: auto;
+    padding: 1.25rem;
     color: #FFF;
     text-align: center;
     font-family: "Tourney";
@@ -258,6 +261,7 @@ height: 570px;
     grid-template-rows: repeat(3,1fr);
     margin: 3.125rem;
     gap: 2.5rem;
+    list-style: none;
 }
 
 .tam-img{
@@ -283,7 +287,7 @@ height: 570px;
     border: 8px solid #000;
     background: #8D8175;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    margin: 1.25rem;
+    margin: .625rem;
 }
 
 .titulo-nosotros h2{
@@ -687,4 +691,138 @@ footer{
 footer img{
     width: 40px;
     height: 40px;
+}
+
+
+
+/*MEDIA QUERY. HACIENDO RESPONSIVE 100% A INDEX Y NOSOTROS*/
+@media (max-width: 1024px){
+    header{
+        flex-direction: column;
+    }
+    .navbar{
+        gap: 1.25rem;
+        text-decoration: none;
+    }
+    .section3-inicio{
+        flex-direction: column;
+    }
+    .titulo-nosotros h2{
+        font-size: 3.75rem;
+    }
+    .imagen-conocenos{
+        width: 400px;
+        margin-top: 50px;
+    }
+    .section2-nosotros{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media (max-width: 768px){
+    header{
+        flex-direction: column;
+    }
+    .navbar{
+        gap: .625rem;
+        text-decoration: none;
+    }
+    nav li a{
+        font-size: 1.5625rem;
+    }
+    nav img{
+        width: 1.5625rem;
+        height: 1.5625rem;
+    }
+    .section1-inicio{
+        display: none;
+    }
+    .section3-inicio{
+        flex-direction: column;
+    }
+    .imagen-conocenos{
+        display: none;
+    }
+    .titulo-nosotros{
+        width: 100%;
+    }
+    .container-parrafo{
+        width: 100%;
+    }
+}
+
+@media (max-width: 425px){
+    header{
+        flex-direction: column;
+    }
+    .navbar{
+        gap: .9375rem;
+        text-decoration: none;
+    }
+    nav li a{
+        font-size: 1.25rem;
+    }
+    nav img{
+        width: 1.25rem;
+        height: 1.25rem;
+    }
+    .section1-inicio{
+        display: none;
+    }
+    .section2-inicio{
+        font-size: 80px;
+    }
+    .section2-inicio span{
+        font-size: 120px;
+    }
+    .section3-inicio{
+        flex-direction: column;
+    }
+    .section3-inicio div img{
+        width: 18.75rem;
+    }
+    .enlace{
+        width: auto;
+        height: auto;
+    }
+    .enlace h2{
+        height: auto;
+        font-size: 5rem;
+        text-align: center;
+    }
+    .imagen-newsletter{
+        display: none;
+    }
+    .titulo-nosotros h2{
+        font-size: 3.125rem;
+    }
+    .container-parrafo{
+        width: 25rem;
+    }
+    .container-parrafo p{
+        font-size: 1.25rem;
+    }
+    .opinion{
+        width: 25rem;
+    }
+    .opinion label{
+        font-size: 2.1875rem;
+    }
+    .form-newsletter{
+        width: 25rem;
+        height: auto;
+        padding: 1.25rem;
+    }
+    .form-newsletter label{
+        font-size: 1.25rem;
+    }
+    .datos{
+        width: 18.75rem;
+    }
+    .boton-enviar{
+        width: 3.125rem;
+        height: 3.125rem;
+        margin: .3125rem;
+    }
+
 }
