--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ nav :hover{
     width: 41.5625rem;
     height: 32.375rem;
     color: #FFF;
-    text-align: center;
+    text-align: justify;
     font-family: League Spartan;
     font-size: 2.5rem;
     font-style: normal;
