--- a/css/style-original.css
+++ b/css/style-original.css
@@ -36,14 +36,11 @@ body{
 }
 
 header{
-    background-color: #BFAE9D;
-    min-width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-}
+    flex-direction: column;
+    min-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 
 .logo-header{
     width: 10rem;
@@ -59,7 +56,7 @@ header{
     text-decoration: none;
 }
 
-nav li a {
+.navbar li a {
     color: #FFF;
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -72,7 +69,7 @@ nav li a {
     padding: 1.7569rem 0 1.6087rem 0;
 }
 
-nav :hover{
+.navbar :hover{
     color: #000;
 }
 /*MAIN*/
