--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,10 @@
 @import "./base/reset";
 @import "./layout/header";
 @import "./layout/main-index";
+@import "./layout/main-carrito";
+@import "./layout/main-ingreso";
+@import "./layout/main-nosotros";
+@import "./layout/main-tienda";
 
 
 @import "./layout/footer";
