--- a/scss/layout/_main-nosotros.scss
+++ b/scss/layout/_main-nosotros.scss
@@ -1,2 +1,133 @@
-
+.main-nosotros{
+    .titulo-nosotros{
+        height: 9.9375rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        border-radius: 3.125rem;
+        border: 8px solid #000;
+        background: #8D8175;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        margin: .625rem;
+        h2{
+            width: 37.25rem;
+            height: 4.5625rem;
+            color: #ffffff;
+            text-align: center;
+            font-family: Sifonn;
+            font-size: 5rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            text-shadow: -2px -2px 1px #ffffff, 2px 2px 1px #ffffff, -2px 2px 1px #ffffff, 2px -2px 1px #ffffff;
+        }
+    }
+    .container-conocenos{
+        display: flex;
+        flex-direction: row ;
+        justify-content: space-between;
+        .container-parrafo{
+            display: flex;
+            width: 50%;
+            height: 37rem;
+            border-radius: 3.125rem;
+            border: 8px solid #000;
+            background: #8D8275;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            margin : 1.25rem;
+            align-items: center;
+            justify-content: center;
+            p{
+                width: 41.5625rem;
+                height: 32.375rem;
+                color: #FFF;
+                text-align: justify;
+                font-family: League Spartan;
+                font-size: 2.5rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+            }
+        }
+        .titulo-newsletter{
+            width: 100%;
+        }
+        .section2-nosotros{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            div{
+                form{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 1.25rem;
+                    width: 41.6875rem;
+                    height: 37rem;
+                    border-radius: 3.125rem;
+                    border: 8px solid #000;
+                    background: #8D8275;
+                    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                    margin: 1.25rem;
+                    label{
+                        color: #FFF;
+                        text-align: center;
+                        font-family: League Spartan;
+                        font-size: 2.5rem;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                        }
+                    .datos{
+                        width: 36.9375rem;
+                        height: 4.8125rem;
+                        border: 4px solid #000;
+                        background: #FFFCFC;
+                        margin: 0 2.375rem ;
+                    }
+                    .boton-enviar{
+                        width: 4.8125rem;
+                        height: 4.6875rem;
+                    }
+                }
+            }
+        }
+        .opinion{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 26.8125rem;
+            border-radius: 3.125rem;
+            border: 8px solid #000;
+            background: #8D8275;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            margin: 1.25rem;
+            .input-opinion{
+                width: 80% ;
+                height: 10.875rem;
+                border: 4px solid #000;
+                background: #FFFCFC;
+                margin: 0 4.6875rem;
+                font-size: medium;
+            }
+            .boton-enviar{
+                width: 4.8125rem;
+                height: 4.6875rem;
+            }
+            label{
+                color: #FFF;
+                text-align: center;
+                font-family: League Spartan;
+                font-size: 2.5rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+        }
+    }
 
