--- a/scss/layout/_main-carrito.scss
+++ b/scss/layout/_main-carrito.scss
@@ -1,2 +1,151 @@
-
+main{
+    .titulo-carrito{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 3.125rem;
+        h1{
+            width: 34.4375rem;
+            height: 5.9375rem;
+            border-radius: 3.125rem;
+            border: 4px solid #000;
+            background: #8D8175;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            width: 32.875rem;
+            height: 5.9375rem;
+            color: #FFF;
+            text-align: center;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            font-family: League Spartan;
+            font-size: 6rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+    }
+    .carrito{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        section{
+            ul{
+                display: flex;
+                flex-direction: column;
+                margin: 1.25rem;
+                width: 50rem;
+                height: auto;
+                border-radius: 50px;
+                border: 4px solid #000;
+                background: #8D8275;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                li{
+                    display: flex;
+                    align-items:center ;
+                    padding: 1.25rem;
+                    img{
+                        width: 12.875rem;
+                        height: 8.625rem;
+                        border: .3125rem solid black;
+                    }
+                    h3{
+                        width: 16.8254rem;
+                        height: 2.9078rem;
+                        color: #FFF;
+                        text-align: center;
+                        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                        font-family: League Spartan;
+                        font-size: 2.5rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: normal;
+                    }
+                    .precio-carrito{
+                        width: 10rem;
+                        height: 3.75rem;
+                        border-radius: 5rem;
+                        border: 2px solid #000;
+                        background: rgba(143, 96, 96, 0.50);
+                        h4{
+                            width: 9.625rem;
+                            height: 4.0625rem;
+                            color: #FFF;
+                            text-align: center;
+                            font-family: League Spartan;
+                            font-size: 40px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: normal;
+                            padding-top: .625rem;
+                        }
+                    }
+                }
+            }
+        }
+        .section2-carrito{
+            display: flex;
+            flex-direction: column;
+            gap: 3.125rem;
+            justify-content: center;
+            align-items: center;
+            h2{
+                width: 26.625rem;
+                height: 3.9375rem;
+                border-radius: 3.125rem;
+                border: 4px solid #000;
+                background: #8D8175;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                color: #FFF;
+                text-align: center;
+                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                font-family: League Spartan;
+                font-size: 3.125rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+            .resumen{
+                width: 26.625rem;
+                height: 17.125rem;
+                border-radius: 3.125rem;
+                border: 4px solid #000;
+                background: #8D8275;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                margin: 3.125rem;
+                div{
+                    h3{
+                        color: #FFF;
+                        text-align: center;
+                        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                        font-family: League Spartan;
+                        font-size: 42px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                    }
+                    a{
+                        button{
+                            width: 16.25rem;
+                            height: 4.8125rem;
+                            color: #000000;
+                            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                            font-family: League Spartan;
+                            font-size: 40px;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: normal;
+                            border-radius: 1.875rem;
+                            border: .25rem solid #000;
+                            background: #ECB528;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
