--- a/scss/layout/_main-ingreso.scss
+++ b/scss/layout/_main-ingreso.scss
@@ -1,2 +1,118 @@
+.main-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 3.125rem;
+    .login {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.25rem;
+        margin: 3.125rem;
+        width: 68.5rem;
+        height: 49.3125rem;
+        border-radius: 3.125rem;
+        border: 8px solid #000;
+        background-image: url("../assets/img/fondo-login.PNG");
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        background-repeat: no-repeat;
+        background-size: cover ;
+        h1{
+            width: 40.375rem;
+            height: 3.0625rem;
+            color: #FFF;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            font-family: League Spartan;
+            font-size: 3.75rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+        div{
+            form{
+                display: flex;
+                flex-direction: column;
+                gap: 1.25rem;
+                justify-content: center;
+                align-items: center;
+                margin-top: 2.5rem;
+                label{
+                    width: 27.9375rem;
+                    height: 3.0625rem;
+                    color: #FFF;
+                    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                    font-family: League Spartan;
+                    font-size: 2.5rem;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: normal;
+                }
+                input{
+                    width: 36.9375rem;
+                    height: 4.8125rem;
+                    border: 4px solid #000;
+                    background: #FFFCFC;
+                    margin: 0 2.375rem ;
+                }
+                a{
+                    input{
+                        width: 16.25rem;
+                        height: 4.8125rem;
+                        color: #000000;
+                        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                        font-family: League Spartan;
+                        font-size: 40px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                        border-radius: 1.875rem;
+                        border: .25rem solid #000;
+                        background: #ECB528;
+                    }
+                }
+            }
+            h3{
+                color: #FFF;
+                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                font-family: League Spartan;
+                font-size: 2.25rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+        }
+    }
+    .login-section2{
+        width: 31.1875rem;
+        height: 6rem;
+        border-radius: 3.125rem;
+        border: 8px solid #000;
+        background: url("../assets/img/fondo-login.PNG");
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin: 3.125rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        h2{
+            a{
+                width: 30.875rem;
+                height: 6rem;
+                color: #ffffff;
+                text-align: center;
+                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                font-family: League Spartan;
+                font-size: 2.25rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;   
+                text-decoration: none; 
+            }
+        }
+    }
+}
 
 
