--- a/scss/layout/_main-tienda.scss
+++ b/scss/layout/_main-tienda.scss
@@ -1,2 +1,104 @@
-
+main{
+    .titulo{
+        width: 100%;
+        height: 30.9375rem;
+        background: url("../assets/img/fondo-tienda.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 0 30%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        margin: 0 0 50px 0;
+        h1{
+            width: 55.375rem;
+            height: 6.25rem;
+            color: #000;
+            text-align: center;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            font-family: "Sifonn";
+            font-size: 8rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 6.25rem; /* 78.125% */
+            text-shadow: -3px -3px 2px #ffffff, 3px 3px 2px #ffffff, -3px 3px 2px #ffffff, 3px -3px 2px #fafafa;
+            margin-top: 1.875rem;
+            span{
+                width: 50.5rem;
+                height: 7.5rem;
+                color: #FFFCFC;
+                text-align: center;
+                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                font-family: "Sifonn";
+                font-size: 8rem;
+                font-style: normal;
+                line-height: 7.5rem; /* 93.75% */
+                letter-spacing: 25.6px;
+                font-weight: bolder;
+            }
+        }
+    }
+    .tienda-principal{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 3.125rem;
+        .tienda{
+            width: 90rem;
+            height: auto;
+            border-radius: 8.5rem;
+            border: 5px solid #020202;
+            background: #8D8175;
+            text-align: center;
+            margin: 3.125rem;
+            h2{
+                width: 34.8125rem;
+                height: 17.0625rem;
+                color: #FFF;
+                text-align: center;
+                font-family: "Sifonn";
+                font-size: 7.625rem;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 7.5rem; /* 125%*/
+                letter-spacing: 9.6px;
+                margin:3.125rem 0 0 9.375rem;
+            }
+            ul{
+                display: grid;
+                grid-template-columns: repeat(2,1fr);
+                grid-template-rows: repeat(3,1fr);
+                margin: 3.125rem;
+                gap: 2.5rem;
+                list-style: none;
+                li{
+                    div{
+                        .tam-img{
+                            width: 15.625rem;
+                            height: 15.625rem;
+                            border: .3125rem solid black;
+                        }
+                        button{
+                            border-radius: 5rem;
+                            border: 2px solid #000;
+                            background: rgba(143, 96, 96, 0.50);
+                            width: 8.75rem;
+                            height: 5rem;
+                        }
+                        h3{
+                            color: #ffffff;
+                            text-align: center;
+                            font-family: League Spartan;
+                            font-size: 2rem;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: normal;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
